Fix dropdown item alignment by making wrapper display flex

--- a/index.css
+++ b/index.css
@@ -2269,7 +2269,7 @@ img, video, canvas, audio, iframe, embed, object {
 /* Dropdown CSS */
 .dropdown {
     position: relative;
-    display: inline-block;
+    display: flex;
 }
 
 .dropdown-content {
